--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type= "text/css" href= "stylesheets/styles.css">
 </head>
 <body>
-    
+<!--     
     <a href="#!/profile">Profile</a>
-    <a href="#!/edit-profile">Edit Profile</a>
+    <a href="#!/edit-profile">Edit Profile</a> -->
     <ng-view></ng-view>
 
     
